refactor: navbar menu

--- a/src/app/layout/admin/components/navbar/navbar-menu/navbar-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-menu/navbar-menu.component.html
@@ -22,6 +22,8 @@
 			<ul>
 				<li
 					*ngFor="let item of menu.items"
+					(mouseenter)="mouseEnter($event)"
+					(mouseleave)="mouseLeave($event)"
 					class="group relative px-2 text-xs font-semibold text-gray-600 dark:text-night-200">
 					<div
 						(click)="toggleMenu(menu)"
