--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,23 +4,34 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@layer components {
+
+  .dropdown-content {
+    @apply pointer-events-none scale-95 opacity-0 duration-100 ease-in;
+  }
+
+  .dropdown:hover>.dropdown-content {
+    @apply pointer-events-auto scale-100 animate-fade-in-up opacity-100 duration-200 block;
+  }
+}
+
 /** Scroll bar **/
 ::-webkit-scrollbar {
-	width: 5px;
-	height: 5px;
+  width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-	background: #e4e4e4;
-	border-radius: 10px;
+  background: #e4e4e4;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background: #fafafa;
+  background: #fafafa;
 }
 
 ::-webkit-scrollbar-track {
-	background: #ffffff;
-	border-radius: 10px;
-	box-shadow: inset 7px 10px 12px #f0f0f0;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: inset 7px 10px 12px #f0f0f0;
 }
