--- a/src/app/layout/admin/components/navbar/navbar-menu/navbar-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-menu/navbar-menu.component.html
@@ -92,22 +92,6 @@
 					[ngTemplateOutletContext]="{ item: item }">
 				</ng-container>
 
-				<!-- Child Menu -->
-				<ng-template #childMenu let-item="item">
-					<button
-						class="flex w-full items-center justify-between rounded-md py-2 px-2 text-xs font-semibold text-gray-600 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500">
-						<div class="flex items-center justify-start">
-							<span class="mr-2 text-gray-400 dark:text-night-200" *ngIf="item.icon">
-								<svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
-							</span>
-							{{ item.label }}
-						</div>
-						<span>
-							<svg-icon src="assets/icons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
-						</span>
-					</button>
-				</ng-template>
-
 				<!-- Parent Menu -->
 				<ng-template #parentMenu let-item="item">
 					<button
@@ -123,10 +107,26 @@
 						</div>
 					</button>
 				</ng-template>
+
+				<!-- Child Menu -->
+				<ng-template #childMenu let-item="item">
+					<button
+						class="dropdown flex w-full items-center justify-between rounded-md py-2 px-2 text-xs font-semibold text-gray-600 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500">
+						<div class="flex items-center justify-start">
+							<span class="mr-2 text-gray-400 dark:text-night-200" *ngIf="item.icon">
+								<svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
+							</span>
+							{{ item.label }}
+						</div>
+						<span>
+							<svg-icon src="assets/icons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
+						</span>
+					</button>
+				</ng-template>
 			</li>
 		</ul>
 	</div>
-	<ul class="absolute hidden min-w-max rounded-md bg-white pt-2 text-gray-700 dark:bg-night-600">
+	<!-- <ul class="absolute hidden min-w-max rounded-md bg-white pt-2 text-gray-700 dark:bg-night-600">
 		<li *ngFor="let item of menu.items">
 			<a class="whitespace-no-wrap block rounded-t bg-gray-200 py-2 px-4 hover:bg-gray-400"> {{ item.label }} </a>
 		</li>
@@ -147,5 +147,5 @@
 		<li>
 			<a class="whitespace-no-wrap block rounded-b bg-gray-200 py-2 px-4 hover:bg-gray-400"> Option 4 </a>
 		</li>
-	</ul>
+	</ul> -->
 </div>
