--- a/src/app/layout/admin/components/navbar/navbar-menu/navbar-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-menu/navbar-menu.component.html
@@ -64,7 +64,7 @@
 					</div>
 
 					<!-- Submenu Dropdown -->
-					<app-navbar-submenu [submenu]="item"></app-navbar-submenu>
+					<div navbar-submenu [submenu]="item"></div>
 				</li>
 			</ul>
 		</div>
@@ -83,8 +83,8 @@
 		<span>{{ menu.group }}</span>
 	</button>
 	<!-- Dropdown  -->
-	<div class="dropdown-content absolute min-w-[200px]">
-		<ul class="mt-2 space-y-0.5 rounded-md bg-white py-3 px-3 shadow-custom dark:bg-night-600">
+	<div class="dropdown-content absolute top-[100%] min-w-[200px] origin-top-left">
+		<ul class="mt-2 space-y-0.5 rounded-md bg-white py-3 shadow-custom dark:bg-night-600">
 			<li class="flex font-semibold text-gray-600 dark:text-night-200" *ngFor="let item of menu.items">
 				<!-- Condition -->
 				<ng-container
@@ -98,54 +98,39 @@
 						[routerLink]="item.route"
 						routerLinkActive="text-primary-500"
 						[routerLinkActiveOptions]="{ exact: true }"
-						class="flex w-full items-center justify-between rounded-md py-2 px-2 text-xs font-semibold text-gray-600 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500">
+						class="mx-3 flex w-full items-center justify-between rounded-md py-2 px-2 text-xs font-semibold text-gray-600 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500">
 						<div class="flex items-center justify-start">
 							<span class="mr-2 text-gray-400 dark:text-night-200" *ngIf="item.icon">
 								<svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
 							</span>
-							{{ item.label }}
+							<span class="ml-1">{{ item.label }}</span>
 						</div>
 					</button>
 				</ng-template>
 
 				<!-- Child Menu -->
 				<ng-template #childMenu let-item="item">
-					<button
-						class="dropdown flex w-full items-center justify-between rounded-md py-2 px-2 text-xs font-semibold text-gray-600 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500">
-						<div class="flex items-center justify-start">
-							<span class="mr-2 text-gray-400 dark:text-night-200" *ngIf="item.icon">
-								<svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
+					<div class="dropdown relative flex w-full">
+						<button
+							class="mx-3 flex w-full items-center justify-between rounded-md py-2 px-2 text-xs font-semibold text-gray-600 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500">
+							<div class="flex items-center justify-start">
+								<span class="mr-2 text-gray-400 dark:text-night-200" *ngIf="item.icon">
+									<svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
+								</span>
+								<span class="ml-1">{{ item.label }}</span>
+							</div>
+							<span>
+								<svg-icon src="assets/icons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
 							</span>
-							{{ item.label }}
-						</div>
-						<span>
-							<svg-icon src="assets/icons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
-						</span>
-					</button>
+						</button>
+						<!-- Submenu Dropdown -->
+						<div
+							class="dropdown-content absolute top-0 left-[100%] min-w-[200px] origin-top-left"
+							navbar-submenu
+							[submenu]="item"></div>
+					</div>
 				</ng-template>
 			</li>
 		</ul>
 	</div>
-	<!-- <ul class="absolute hidden min-w-max rounded-md bg-white pt-2 text-gray-700 dark:bg-night-600">
-		<li *ngFor="let item of menu.items">
-			<a class="whitespace-no-wrap block rounded-t bg-gray-200 py-2 px-4 hover:bg-gray-400"> {{ item.label }} </a>
-		</li>
-		<li>
-			<a class="whitespace-no-wrap block bg-gray-200 py-2 px-4 hover:bg-gray-400"> Option 2 </a>
-		</li>
-		<li class="dropdown">
-			<a class="whitespace-no-wrap block bg-gray-200 py-2 px-4 hover:bg-gray-400"> Option 3 🠞 </a>
-			<ul class="dropdown-content absolute ml-24 -mt-10 hidden pl-5 text-gray-700">
-				<li>
-					<a class="whitespace-no-wrap block bg-gray-200 py-2 px-4 hover:bg-gray-400"> Option 3-1 </a>
-				</li>
-				<li>
-					<a class="whitespace-no-wrap block bg-gray-200 py-2 px-4 hover:bg-gray-400"> Option 3-2 </a>
-				</li>
-			</ul>
-		</li>
-		<li>
-			<a class="whitespace-no-wrap block rounded-b bg-gray-200 py-2 px-4 hover:bg-gray-400"> Option 4 </a>
-		</li>
-	</ul> -->
 </div>
