refactor: dropdown menu

--- a/src/app/layout/admin/components/navbar/navbar-submenu/navbar-submenu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-submenu/navbar-submenu.component.html
@@ -39,7 +39,7 @@
 				</button>
 				<!-- Submenu Dropdown -->
 				<div
-					class="dropdown-content absolute top-0 min-w-[200px] origin-top-left"
+					class="dropdown-content absolute top-0 left-[100%] min-w-[200px] origin-top-left"
 					navbar-submenu
 					[submenu]="item.children"></div>
 			</div>
