--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,25 +1,17 @@
-<div class="flex-auto space-y-6 rounded-lg bg-white px-5 py-6 dark:bg-night-700">
-	<div class="space-y-1">
-		<dt class="font-mono text-xs dark:text-night-200">font-display</dt>
-		<dd class="text-2xl font-extrabold leading-7 text-gray-900 dark:text-night-50" style="opacity: 1">Poppins</dd>
-	</div>
-	<div class="space-y-1">
-		<dt class="font-mono text-xs dark:text-night-200">font-body</dt>
-		<dd class="text-xs font-light text-gray-600 dark:text-night-200">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi ultrices non pharetra, eros enim. Habitant
-			suspendisse ultricies.
-		</dd>
-	</div>
-</div>
-
-<div class="mt-5">
-	<details class="rounded-lg transition-all duration-200 ease-in open:bg-white dark:open:bg-night-700" open>
-		<summary
-			class="cursor-pointer rounded-md bg-white p-2 text-sm font-semibold leading-6 text-primary-500 dark:bg-night-600">
-			Why do they call it Ovaltine?
-		</summary>
-		<div class="p-2 text-sm leading-6 text-night-600 dark:text-night-200">
-			<p>The mug is round. The jar is round. They should call it Roundtine.</p>
+<div class="flex flex-col px-5 py-5">
+	<div class="flex-auto space-y-6 rounded-lg bg-white px-5 py-6 dark:bg-night-700">
+		<div class="space-y-1">
+			<dt class="font-mono text-xs dark:text-night-200">font-display</dt>
+			<dd class="text-2xl font-extrabold leading-7 text-gray-900 dark:text-night-50" style="opacity: 1">
+				Poppins
+			</dd>
 		</div>
-	</details>
+		<div class="space-y-1">
+			<dt class="font-mono text-xs dark:text-night-200">font-body</dt>
+			<dd class="text-xs font-light text-gray-600 dark:text-night-200">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi ultrices non pharetra, eros enim. Habitant
+				suspendisse ultricies.
+			</dd>
+		</div>
+	</div>
 </div>
