--- a/src/app/layout/admin/admin.component.html
+++ b/src/app/layout/admin/admin.component.html
@@ -15,6 +15,6 @@
 		<!-- <app-footer></app-footer> -->
 
 		<!-- Bottom bar -->
-		<app-bottom-navbar></app-bottom-navbar>
+		<!-- <app-bottom-navbar></app-bottom-navbar> -->
 	</div>
 </div>
