--- a/src/app/layout/admin/components/navbar/navbar-mobile-menu/navbar-mobile-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-mobile-menu/navbar-mobile-menu.component.html
@@ -10,160 +10,33 @@
 <div
 	[ngClass]="
 		(showMobileMenu$ | async)
-			? 'pointer-events-auto scale-100 opacity-100 duration-200 ease-out'
-			: 'pointer-events-none scale-95 opacity-0 duration-100 ease-in'
+			? 'pointer-events-auto scale-100 animate-fade-in-up opacity-100 duration-200'
+			: 'pointer-events-none scale-95 opacity-0 duration-100 ease-out'
 	"
 	class="absolute inset-x-0 top-0 origin-top-right transform p-2 transition md:hidden">
-	<div class="divide-y-2 divide-gray-50 rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5">
+	<div
+		class="divide-y-2 divide-gray-50 rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5 dark:divide-night-600 dark:bg-night-700">
 		<div class="px-5 pt-5 pb-6">
 			<div class="flex items-center justify-between">
 				<div>
-					<img
-						class="h-8 w-auto"
-						src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg"
-						alt="Workflow" />
+					<a
+						class="flex items-center justify-center rounded bg-primary-500 p-2 focus:outline-none focus:ring-1">
+						<svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
+					</a>
 				</div>
 				<div class="-mr-2">
 					<button
 						(click)="toggleMobileMenu()"
 						type="button"
-						class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+						class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500 dark:text-night-300 dark:hover:bg-night-600 dark:hover:text-night-200">
 						<span class="sr-only">Close menu</span>
 						<!-- Heroicon name: outline/x -->
-						<svg
-							class="h-6 w-6"
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke="currentColor"
-							aria-hidden="true">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M6 18L18 6M6 6l12 12" />
-						</svg>
+						<svg-icon src="assets/icons/outline/x.svg"> [svgClass]="'h-6 w-6'"> </svg-icon>
 					</button>
 				</div>
 			</div>
-			<div class="mt-6">
-				<nav class="grid gap-y-8">
-					<a href="#" class="-m-3 flex items-center rounded-md p-3 hover:bg-gray-50">
-						<!-- Heroicon name: outline/chart-bar -->
-						<svg
-							class="h-6 w-6 flex-shrink-0 text-indigo-600"
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke="currentColor"
-							aria-hidden="true">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-						</svg>
-						<span class="ml-3 text-base font-medium text-gray-900"> Analytics </span>
-					</a>
-
-					<a href="#" class="-m-3 flex items-center rounded-md p-3 hover:bg-gray-50">
-						<!-- Heroicon name: outline/cursor-click -->
-						<svg
-							class="h-6 w-6 flex-shrink-0 text-indigo-600"
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke="currentColor"
-							aria-hidden="true">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M15 15l-2 5L9 9l11 4-5 2zm0 0l5 5M7.188 2.239l.777 2.897M5.136 7.965l-2.898-.777M13.95 4.05l-2.122 2.122m-5.657 5.656l-2.12 2.122" />
-						</svg>
-						<span class="ml-3 text-base font-medium text-gray-900"> Engagement </span>
-					</a>
-
-					<a href="#" class="-m-3 flex items-center rounded-md p-3 hover:bg-gray-50">
-						<!-- Heroicon name: outline/shield-check -->
-						<svg
-							class="h-6 w-6 flex-shrink-0 text-indigo-600"
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke="currentColor"
-							aria-hidden="true">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
-						</svg>
-						<span class="ml-3 text-base font-medium text-gray-900"> Security </span>
-					</a>
-
-					<a href="#" class="-m-3 flex items-center rounded-md p-3 hover:bg-gray-50">
-						<!-- Heroicon name: outline/view-grid -->
-						<svg
-							class="h-6 w-6 flex-shrink-0 text-indigo-600"
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke="currentColor"
-							aria-hidden="true">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
-						</svg>
-						<span class="ml-3 text-base font-medium text-gray-900"> Integrations </span>
-					</a>
-
-					<a href="#" class="-m-3 flex items-center rounded-md p-3 hover:bg-gray-50">
-						<!-- Heroicon name: outline/refresh -->
-						<svg
-							class="h-6 w-6 flex-shrink-0 text-indigo-600"
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke="currentColor"
-							aria-hidden="true">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
-						</svg>
-						<span class="ml-3 text-base font-medium text-gray-900"> Automations </span>
-					</a>
-				</nav>
-			</div>
-		</div>
-		<div class="space-y-6 py-6 px-5">
-			<div class="grid grid-cols-2 gap-y-4 gap-x-8">
-				<a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Pricing </a>
-
-				<a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Docs </a>
-
-				<a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Help Center </a>
-
-				<a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Guides </a>
-
-				<a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Events </a>
-
-				<a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Security </a>
-			</div>
-			<div>
-				<a
-					href="#"
-					class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">
-					Sign up
-				</a>
-				<p class="mt-6 text-center text-base font-medium text-gray-500">
-					Existing customer?
-					<a href="#" class="text-indigo-600 hover:text-indigo-500"> Sign in </a>
-				</p>
+			<div class="max-h-[500px] overflow-y-auto">
+				<app-sidebar-menu></app-sidebar-menu>
 			</div>
 		</div>
 	</div>
