refactor: mobile navbar

--- a/src/app/layout/admin/components/navbar/navbar.component.html
+++ b/src/app/layout/admin/components/navbar/navbar.component.html
@@ -34,5 +34,5 @@
 		</div>
 	</div>
 	<!-- Mobile menu -->
-	<app-navbar-mobile-menu></app-navbar-mobile-menu>
+	<app-navbar-mobile></app-navbar-mobile>
 </div>
