feat: add navbar mobile menu

--- a/src/app/layout/admin/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 			<div class="max-h-[500px] overflow-y-auto">
-				<app-sidebar-menu></app-sidebar-menu>
+				<app-navbar-mobile-menu></app-navbar-mobile-menu>
 			</div>
 		</div>
 	</div>
