--- a/src/app/layout/admin/components/navbar/navbar-mobile/navbar-mobile-menu/navbar-mobile-menu.component.html
+++ b/src/app/layout/admin/components/navbar/navbar-mobile/navbar-mobile-menu/navbar-mobile-menu.component.html
@@ -1,8 +1,6 @@
 <div class="pt-4" *ngFor="let menu of pagesMenu$ | async">
 	<div class="mx-1 mb-2 flex items-center justify-between">
-		<small
-			[ngClass]="{ hidden: !(showSideBar$ | async) }"
-			class="text-xs font-semibold text-gray-400 dark:text-night-200">
+		<small class="text-xs font-semibold text-gray-400 dark:text-night-200">
 			{{ menu.group }}
 		</small>
 	</div>
@@ -12,7 +10,9 @@
 			<!-- Menu List -->
 			<div (click)="toggleMenu(item)" class="group relative text-gray-400 dark:text-night-400">
 				<!-- Icon -->
-				<div class="pointer-events-none absolute m-2">
+				<div
+					[ngClass]="item.active && !(showSideBar$ | async) ? 'text-primary-500' : ''"
+					class="pointer-events-none absolute m-2">
 					<svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
 				</div>
 
@@ -53,14 +53,18 @@
 					class="pointer-events-none absolute top-1 right-0 flex items-center p-1 text-gray-400 transition-all duration-500 dark:text-night-400">
 					<svg-icon src="assets/icons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
 				</button>
+
+				<!-- Tooltip -->
+				<div class="fixed w-full" *ngIf="!(showSideBar$ | async)">
+					<span
+						class="z-1 absolute left-12 -top-[34px] w-auto min-w-max origin-left scale-0 rounded-md bg-black p-2 text-xs font-bold text-white shadow-md transition-all duration-200 group-hover:scale-100 dark:bg-white dark:text-night-900">
+						{{ item.label }}
+					</span>
+				</div>
 			</div>
 
 			<!-- Submenu items -->
-			<app-sidebar-submenu [submenu]="item"></app-sidebar-submenu>
+			<app-navbar-mobile-submenu [submenu]="item"></app-navbar-mobile-submenu>
 		</li>
 	</ul>
-
-	<div class="pt-3" *ngIf="menu.separator">
-		<hr class="border-dashed border-gray-200 dark:border-night-500" />
-	</div>
 </div>
