--- a/src/app/layout/admin/components/sidebar/sidebar.component.html
+++ b/src/app/layout/admin/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <nav
 	[ngClass]="(showSideBar$ | async) ? 'w-52 xl:w-64' : 'w-[70px]'"
-	class="hidden h-full flex-col justify-between overflow-auto bg-white pt-3 transition-all duration-300 dark:bg-night-700 lg:flex">
+	class="scrollbar-thumb-rounded scrollbar-track-rounded hidden h-full flex-col justify-between overflow-auto bg-white pt-3 transition-all duration-300 scrollbar-thin scrollbar-track-gray-50 scrollbar-thumb-gray-100 dark:bg-night-700 dark:scrollbar-thumb-night-500 dark:scrollbar-track-night-600 lg:flex">
 	<div class="px-4">
 		<!-- Logo -->
 		<div class="relative h-10">
@@ -14,7 +14,7 @@
 			</div>
 			<button
 				(click)="toggleSidebar()"
-				class="absolute top-2 right-2 flex h-5 w-5 items-center justify-center rounded opacity-20 transition-all duration-200 hover:opacity-70 focus:outline-none dark:text-slate-100"
+				class="absolute top-2 right-2 flex h-5 w-5 items-center justify-center rounded opacity-20 transition-all duration-200 focus:outline-none hover:opacity-70 dark:text-slate-100"
 				[ngClass]="{ 'rotate-180': !(showSideBar$ | async) }">
 				<svg-icon src="assets/icons/solid/chevron-double-left.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
 			</button>
