--- a/src/app/modules/layout/admin/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/modules/layout/admin/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -23,7 +23,7 @@
 					<div class="flex items-center justify-start sm:order-2 md:mr-10 lg:hidden">
 						<a
 							class="flex items-center justify-center rounded bg-primary-500 p-2 focus:outline-none focus:ring-1">
-							<svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5 text-red'"> </svg-icon>
+							<svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
 						</a>
 						<b class="pl-3 text-sm font-bold dark:text-night-50"> Finance </b>
 					</div>
