--- a/src/app/modules/layout/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/admin/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 				<button
 					(click)="toggleMobileMenu()"
 					type="button"
-					class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500 dark:bg-night-700 dark:text-night-200 dark:hover:text-night-400"
+					class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500 hover:bg-gray-100 hover:text-gray-500 dark:bg-night-700 dark:text-night-200 dark:hover:text-night-400"
 					aria-expanded="false">
 					<span class="sr-only">Open menu</span>
 					<!-- Heroicon name: outline/menu -->
@@ -17,7 +17,7 @@
 			<!-- Logo -->
 			<div class="flex items-center justify-start sm:order-2 md:mr-10 lg:hidden">
 				<a class="flex items-center justify-center rounded bg-primary-500 p-2 focus:outline-none focus:ring-1">
-					<svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5 text-red'"> </svg-icon>
+					<svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
 				</a>
 				<b class="hidden pl-3 text-sm font-bold dark:text-night-50 sm:block"> Finance </b>
 			</div>
